ajout d'une démo jouable
